--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -250,3 +250,9 @@
     margin-left: 12px;
     display: inline-block;
 }
+
+.demoContainer {
+    margin-top: 72px;
+    max-width: 100vw;
+    width: 1000px;
+}
