--- a/src/pages/pricing.module.css
+++ b/src/pages/pricing.module.css
@@ -2,11 +2,13 @@
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 72px 0 128px;
+    padding: 0 0 128px;
 }
 
 .first {
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
+    padding: 72px 0;
 }
 
 .pageTitle {
@@ -119,7 +121,7 @@
 }
 
 .contactUs {
-    margin-bottom: 25vh;
+    margin-bottom: 5vh;
     text-align: center;
 }
 
@@ -144,4 +146,10 @@
         margin-top: 15vh;
         margin-bottom: 15vh;
     }
+}
+
+.demoContainer {
+    margin: 36px auto 0;
+    max-width: 100vw;
+    width: 1000px;
 }
