--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -57,12 +57,16 @@
     display: inline-block;
 }
 
-.mainPreviewScreen {
+.mainPreviewContainer {
+    aspect-ratio: 2.3;
+    object-fit: cover;
     width: 90vw;
     max-width: 1100px;
+}
+
+.mainPreviewScreen {
     box-shadow: 0 0 5px -3px;
     display: block;
-    margin-bottom: 124px;
     border-radius: 8px;
     overflow: hidden;
 }
@@ -80,71 +84,71 @@
         font-size: 20px;
     }
 
-    .mainPreviewScreen {
+    .mainPreviewContainer {
         width: 100%;
+        aspect-ratio: unset;
+        padding-bottom: 24px;
     }
 }
 
 .detailsContainer {
-    background: url("/img/bg.svg");
-    width: 100vw;
-    padding: 72px;
+    background-color: #ebefff;
 }
 
-[data-theme="dark"] .detailsContainer {
-    background: #49454F;
-}
+.detailRow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 164px 0;
 
-.details {
-    margin: 0 auto;
-    box-sizing: border-box;
-    display: grid;
-    column-gap: 24px;
-    row-gap: 12px;
-    grid-template-columns: 500px 1250px;
-    grid-template-rows: auto auto auto;
+    &.right {
+        flex-direction: row-reverse;
+    }
 }
 
 .card {
-    grid-column-start: 1;
-    box-sizing: border-box;
-    padding: 24px;
-    border-radius: 8px;
-    background-color: var(--catalyst-card-color);
+    flex: 0 1 425px;
+}
+
+.cardTitle {
     display: flex;
     align-items: center;
-}
-
-.details:not(:hover) .firstCard,
-.card:hover {
-    outline: 2px solid var(--ifm-color-primary-lighter);
-}
-
-.card h2 {
-    color: var(--ifm-color-primary);
-    font-size: 18px;
-    margin: 0 0 12px;
-}
-
-.card p {
-    line-height: 1.5;
-    font-size: 16px;
-    margin: 0;
+    justify-content: stretch;
+    margin: 0 0 24px;
 }
 
 .emoji {
     font-size: 36px;
-    margin-right: 24px;
+    margin-right: 18px;
+}
+
+.card h2 {
+    color: var(--ifm-color-primary);
+    font-size: 28px;
+    margin: 0;
+    padding: 0;
+}
+
+.card p {
+    line-height: 1.5;
+    font-size: 18px;
+    margin: 12px 0;
+}
+
+.card ul {
+    line-height: 1.5;
+    font-size: 18px;
+    margin: 12px 0;
 }
 
 .detailsScreen {
-    grid-column-start: 2;
-    grid-row-start: 1;
-    grid-row-end: 5;
-    display: none;
-    width: 100%;
-    height: 100%;
-    align-self: center;
+    flex: 0 1 1000px;
+    padding: 0 0 0 64px;
+
+    .right & {
+        flex-direction: row-reverse;
+        padding: 0 64px 0 0;
+    }
 }
 
 .detailsScreen img {
@@ -154,33 +158,28 @@
     object-fit: contain;
 }
 
-.detailsScreen.firstScreen,
-.card:hover + .detailsScreen {
-    display: block;
-}
-
 @media (max-width: 1000px) {
     .detailsContainer {
-        padding: 72px 0;
+        padding: 0;
     }
 
-    .details {
+    .detailRow,
+    .detailRow.right {
         display: flex;
         flex-direction: column;
-        column-gap: 0;
-        row-gap: 0;
+        margin: 72px 0 164px;
     }
 
-    .details:not(:hover) .firstCard,
-    .card:hover {
-        background-color: #faf8ff;
-        outline: 0;
+    .card {
+        flex: 0 0 auto;
+        padding: 12px;
+        margin-bottom: 24px;
     }
 
-    .detailsScreen {
-        max-width: 100%;
-        display: block;
-        margin: 12px 0 48px;
+    .detailsScreen,
+    .right .detailsScreen {
+        flex: 0 1 auto;
+        padding: 0;
     }
 }
 
