Add back dark mode styles, and remove nesting (doesn't work for CSS).

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -95,15 +95,19 @@
     background-color: #ebefff;
 }
 
+[data-theme="dark"] .detailsContainer {
+    background: #49454F;
+}
+
 .detailRow {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 164px 0;
+}
 
-    &.right {
-        flex-direction: row-reverse;
-    }
+.detailRow.right {
+    flex-direction: row-reverse;
 }
 
 .card {
@@ -143,13 +147,14 @@
 
 .detailsScreen {
     flex: 0 1 1000px;
-    padding: 0 0 0 64px;
-
-    .right & {
-        flex-direction: row-reverse;
-        padding: 0 64px 0 0;
-    }
+    padding: 0 0 0 64px; 
 }
+
+.right .detailsScreen {
+    flex-direction: row-reverse;
+    padding: 0 64px 0 0;
+}
+
 
 .detailsScreen img {
     border-radius: 8px;
