--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -23,6 +23,7 @@
 
 .exclaim {
     color: var(--ifm-color-primary);
+    word-break: keep-all;
 }
 
 .subtitle {
@@ -93,148 +94,111 @@
 
 .detailsContainer {
     background-color: #ebefff;
+    width: 100%;
 }
 
 [data-theme="dark"] .detailsContainer {
     background: #49454F;
 }
 
-.detailRow {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 164px 0;
+.detailsPanels {
+    margin: 0 auto;
+    max-width: 1300px;
+    padding: 20vh 0;
 }
 
-.detailRow.right {
-    flex-direction: row-reverse;
+.comparisonContainer {
+    width: 100vw;
+    max-width: 1200px;
+    overflow: hidden;
+    margin: 15vh auto 10vh;
 }
 
-.card {
-    flex: 0 1 425px;
-}
-
-.cardTitle {
-    display: flex;
-    align-items: center;
-    justify-content: stretch;
-    margin: 0 0 24px;
-}
-
-.emoji {
-    font-size: 36px;
-    margin-right: 18px;
-}
-
-.card h2 {
+.comparisonContainer h2 {
     color: var(--ifm-color-primary);
-    font-size: 28px;
-    margin: 0;
-    padding: 0;
-}
-
-.card p {
-    line-height: 1.5;
-    font-size: 18px;
-    margin: 12px 0;
-}
-
-.card ul {
-    line-height: 1.5;
-    font-size: 18px;
-    margin: 12px 0;
-}
-
-.detailsScreen {
-    flex: 0 1 1000px;
-    padding: 0 0 0 64px; 
-}
-
-.right .detailsScreen {
-    flex-direction: row-reverse;
-    padding: 0 64px 0 0;
-}
-
-
-.detailsScreen img {
-    border-radius: 8px;
-    display: block;
-    height: 100%;
-    object-fit: contain;
-}
-
-@media (max-width: 1000px) {
-    .detailsContainer {
-        padding: 0;
-    }
-
-    .detailRow,
-    .detailRow.right {
-        display: flex;
-        flex-direction: column;
-        margin: 72px 0 164px;
-    }
-
-    .card {
-        flex: 0 0 auto;
-        padding: 12px;
-        margin-bottom: 24px;
-    }
-
-    .detailsScreen,
-    .right .detailsScreen {
-        flex: 0 1 auto;
-        padding: 0;
-    }
-}
-
-.bottomCtaContainer {
-    padding: 72px 0 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.clientLibText {
-    padding: 0 12px;
+    font-size: 32px;
     text-align: center;
-    max-width: 700px;
+    margin: 0 0 36px;
 }
 
-.clientLibText p {
-    font-size: 16px;
+.comparisonScroll {
+    padding: 0 24px;
+    overflow-x: auto;
 }
 
-.clientLibs {
-    margin: 12px 0 36px;
+.comparison {
+    min-width: 900px;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    column-gap: 12px;
     row-gap: 12px;
+    column-gap: 12px;
+    grid-template-columns: repeat(4, 1fr);
 }
 
-.clientLibs a {
+.cpnSubject {
+    font-weight: bold;
+    justify-self: center;
+    align-self: flex-start;
+}
+
+[data-theme="dark"] .cpnSubject {
+    align-self: center;
+}
+
+.catalystCompare {
+    width: 100px;
+}
+
+[data-theme="dark"] .catalystCompare {
+    background-color: #fff;
+    padding: 8px 12px;
+    width: 124px;
+    border-radius: 8px;
+}
+
+.cpnResult {
     display: flex;
     flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    text-align: center;
-    padding: 24px 12px;
-    box-sizing: border-box;
+    align-items: stretch;
+    justify-content: flex-start;
+    background-color: var(--catalyst-surface-variant);
     border-radius: 8px;
-    border: 1px solid var(--ifm-color-primary-lighter);
+    padding: 12px;
 }
 
-@media (max-width: 750px) {
-    .clientLibs {
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
-    }
+.cpnResult.hit {
+    background-color: #eefaeb;
 }
 
-.bottomCtas {
-    margin-top: 12px;
+.cpnResult.miss {
+    background-color: #fbe9e9;
+}
+
+[data-theme="dark"] .cpnResult.hit {
+    background: #20321b;
+}
+
+[data-theme="dark"] .cpnResult.miss {
+    background: #3d2929;
+}
+
+.cpnFeature {
+    align-self: center;
+}
+
+.featureTitle {
+    font-weight: bold;
+}
+
+.featureDesc {
+    font-size: 14px;
+    color: var(--catalyst-text-alt);
+}
+
+.featureIcon {
+    text-align: center;
+    font-size: 22px;
+    box-sizing: border-box;
+    padding-bottom: 8px;
 }
 
 .bottomCta {
@@ -265,7 +229,7 @@
 }
 
 .demoContainer {
-    margin: 124px 0;
+    margin: 15vh 0;
     max-width: 100vw;
     width: 1000px;
 }
