--- a/src/components/InfoPanels.module.css
+++ b/src/components/InfoPanels.module.css
@@ -5,7 +5,7 @@
 
 @media (max-width: 500px) {
     .infoPanels {
-        flex-direction: column-reverse;
+        flex-direction: column;
         align-items: stretch;
     }
 }
@@ -23,7 +23,7 @@
     .text {
         flex: 0 0 auto;
         margin-right: 0;
-        margin-top: 12px;
+        margin-bottom: 12px;
     }
 }
 
