--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,7 +17,9 @@
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 
+  --catalyst-shadow-color: #000;
   --catalyst-surface-variant: #e1e2ec;
+  --catalyst-surface-alt: #ebefff;
   --catalyst-text-alt: #45464f;
   --catalyst-outline: #C4C7C5;
 }
@@ -25,16 +27,18 @@
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
   --ifm-background-color: #141218;
-  --ifm-color-primary: #2663df;
+  --ifm-color-primary: #6a94e9;
   --ifm-color-primary-dark: #1e58cd;
   --ifm-color-primary-darker: #1d53c1;
   --ifm-color-primary-darkest: #17449f;
-  --ifm-color-primary-light: #3d73e2;
-  --ifm-color-primary-lighter: #487ce4;
-  --ifm-color-primary-lightest: #6a94e9;
+  --ifm-color-primary-light: #487ce4;
+  --ifm-color-primary-lighter: #3d73e2;
+  --ifm-color-primary-lightest: #2663df;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 
+  --catalyst-shadow-color: #fff;
   --catalyst-surface-variant: #e1e2ec;
+  --catalyst-surface-alt: #49454F;
   --catalyst-text-alt: #CAC4D0;
 }
 
