--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -5,7 +5,8 @@
 }
 
 .first {
-    padding: 18vh 12px 64px;
+    height: 90vh;
+    padding: 0 24px 10vh;
     max-width: 1100px;
     box-sizing: border-box;
     display: flex;
@@ -50,6 +51,7 @@
 .mainCta:link,
 .mainCta:visited {
     color: #fefbff;
+    text-decoration: none;
 }
 
 .mainDocs {
@@ -58,18 +60,68 @@
     display: inline-block;
 }
 
-.mainPreviewContainer {
-    aspect-ratio: 2.3;
-    object-fit: cover;
-    width: 90vw;
-    max-width: 1100px;
+.details {
+    padding: 10vh 0;
+    width: 100%;
+    display: block;
+    background-color: var(--catalyst-surface-alt);
 }
 
-.mainPreviewScreen {
-    box-shadow: 0 0 5px -3px;
-    display: block;
+.detailsTitle {
+    text-align: center;
+}
+
+.detailsCards {
+    margin-top: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 24px;
+}
+
+.detailCard {
     border-radius: 8px;
-    overflow: hidden;
+    box-shadow: 0 2px 6px -3px var(--catalyst-shadow-color);
+    flex: 0 1 100%;
+    max-width: 325px;
+    box-sizing: border-box;
+    padding: 12px 24px;
+    background-color: var(--ifm-background-color);
+}
+
+.detailFeature,
+.detailOver {
+    font-size: 1.1rem;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.detailFeature {
+    margin-bottom: 12px;
+}
+
+.detailOver .detailText {
+    text-decoration: line-through;
+}
+
+.detailIcon {
+    display: inline-block;
+    flex: none;
+}
+
+.detailCheck img {
+    height: 1.1rem;
+    display: block;
+}
+
+.detailText {
+    display: inline-block;
+}
+
+.detailDetails {
+    margin-top: 12px;
+    font-size: 14px;
 }
 
 @media (max-width: 500px) {
@@ -85,12 +137,6 @@
         font-size: 20px;
     }
 
-    .mainPreviewContainer {
-        width: 100%;
-        aspect-ratio: unset;
-        padding-bottom: 24px;
-    }
-
     .ctas {
         display: flex;
         flex-direction: column;
@@ -101,33 +147,31 @@
     .mainDocs {
         margin: 12px 0 0 0;
     }
-}
 
-.detailsContainer {
-    background-color: #ebefff;
-    width: 100%;
-}
+    .detailsCards {
+        flex-direction: column;
+        align-items: stretch;
+    }
 
-[data-theme="dark"] .detailsContainer {
-    background: #49454F;
-}
-
-.detailsPanels {
-    margin: 0 auto;
-    max-width: 1300px;
-    padding: 20vh 0;
+    .detailCard {
+        max-width: 100%;
+    }
 }
 
 .comparisonContainer {
     width: 100vw;
     max-width: 1200px;
     overflow: hidden;
-    margin: 15vh auto 10vh;
+    margin: 0 auto 25vh;
+}
+
+@media (max-width: 500px) {
+    .comparisonContainer {
+    margin: 0 auto 15vh;
+    }
 }
 
 .comparisonContainer h2 {
-    color: var(--ifm-color-primary);
-    font-size: 32px;
     text-align: center;
     margin: 0 0 36px;
 }
